--- a/src/main/resources/templates/gr/customer/myinfo.html
+++ b/src/main/resources/templates/gr/customer/myinfo.html
@@ -596,7 +596,7 @@
 
         const id = /*[[${user.username}]]*/"";
         console.log(id);
-        const pwConfirm = document.querySelector("#pwConfirm");
+        const pwConfirm = document.Selector("#pwConfirm");
         const pw = document.querySelector("#pw");
         const pwcheck = document.querySelector("#pwcheck");
         const button1 = document.querySelector('#button1');
