--- a/src/main/resources/templates/km/customer/selectitem.html
+++ b/src/main/resources/templates/km/customer/selectitem.html
@@ -261,12 +261,12 @@
                                             
                                         </div>
                                         <!-- <a th:href="@{/customer/item/selectone.do(itemno=${item.ITEMNO}, tab='review', orderby=${param.orderby}, page=1)}">가나다</a> -->
-                                        <div id="pagination-container">
+                                        <!-- <div id="pagination-container">
                                             <th:block th:each="num : ${#numbers.sequence(1, pages)}">
                                                 <a th:href="@{/customer/item/selectone.do(itemno=${item.ITEMNO}, tab='review', orderby=${param.orderby}, page=${num})}"
                                                     th:text="${num}"></a>
                                             </th:block>
-                                        </div>
+                                        </div> -->
 
 
 
